--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <a href="#">Terms of Use</a>
         <a href="#">Contact</a>
       </div>
+    </br>
+      <p>Prepared By : Khushbuben Rathva</p>
     </div>
   </footer>
   </div>  
